fix spine player popup z-index

--- a/style/spine-player.css
+++ b/style/spine-player.css
@@ -173,6 +173,7 @@
 /** Popup **/
 .spine-player-popup-parent {
 	position: relative;
+	z-index: 1;
 }
 .spine-player-popup {
 	user-select: none;
